sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1l/errors.dfrouter
Error: Attribute 'lane' is missing in definition of detectorDefinition 'MQ11Fs2'.
Quitting (on error).
